--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId "uz.mdev.mystore"
         minSdk 21
-        targetSdk 31
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -57,5 +57,8 @@ dependencies {
 
     //coil
     implementation 'io.coil-kt:coil:2.1.0'
+
+    //bottomview
+    implementation 'com.google.android.material:material:1.7.0-alpha03'
 
 }
