--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     //bottomview
     implementation 'com.google.android.material:material:1.7.0-alpha03'
 
+    //number picker
+    implementation 'com.github.sephiroth74:NumberSlidingPicker:1.0.3'
 }
