--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,5 @@ dependencies {
     //bottomview
     implementation 'com.google.android.material:material:1.7.0-alpha03'
 
-
+    implementation 'com.github.santalu:maskara:1.0.0'
 }
